# lmms-finetune

./: .gitignore  _MYMEMO.md  main.py  pyproject.toml
example_scripts/: one_vision_image.sh
my_scripts/: README.md  example_image.sh  one_vision_image.sh
