[project]
name = "lmms-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "av>=14.4.0",
    "bitsandbytes>=0.46.0",
    "deepspeed==0.14.4",
    "gradio>=5.34.0",
    "matplotlib>=3.10.3",
    "peft>=0.15.2",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers==4.45.2",
    "transformers-stream-generator>=0.0.5",
    "wandb>=0.20.1",
]
